--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -7,7 +7,6 @@
     top: 0;
     left: 60px;
     margin-bottom: 4em;
-    align-content: center;
     align-items: center;
 }
 .customize {
@@ -24,7 +23,7 @@
     height: 398px;
     width: 350px;    
     border: 3px solid lightgray;
-    object-fit: cover;
+    object-fit: contain;
     margin: auto;
 }
 #input[type="file"] {
