--- a/src/Product/Custombtn.css
+++ b/src/Product/Custombtn.css
@@ -1,7 +1,7 @@
 .header{
   margin-bottom: 1em;
 }
-/* .page-container{
+ .page-container{
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -13,7 +13,7 @@
   margin-bottom: 4em;
   margin-top: 4em;
   margin: 2em;
-} */
+} 
 .summary .btnA {
   width: 150px;
   border-radius: 40px;
@@ -197,3 +197,60 @@
   border: none;
 }
 
+.main .measure {
+  width: fit-content;
+}
+/* .scale {
+  margin: auto;
+  margin-bottom: 2em;
+}
+.scalebtn {
+  background-color: #68ebd1;
+  color: rgb(15, 58, 49);
+  outline: none !important;
+  border: none !important;
+  height: 40px;
+  width: 350px;
+  border-radius: 40px;
+  text-align: center;
+  margin: auto;
+  margin-top: 2em;
+}
+.scalebtn:focus-visible {
+  outline: none !important;
+  border:3px solid lightgray;
+  box-shadow: 0 0 10px rgb(49, 49, 49);
+}
+.scalebtn:hover {
+  outline: none !important;
+  background-color: #68ebd1;
+}
+#scale {
+  background-color: #68ebd1;
+  color: rgb(15, 58, 49);
+  border: none !important;
+  margin-right: auto;
+  margin-left: 40px;
+  border-radius: 40px;
+  width: 6em;
+  height: 2.5em;
+}
+#options button {
+  background-color: white;
+  color: black;
+  border-color: white;
+  margin: 2px;
+  width: 40px;
+}
+#options button:hover {
+  background-color: white;
+  color: black;
+  border-color: white;
+}
+#options button:focus {
+  background-color: white;
+  color: black;
+  border-color: white;
+  border-radius: 100%;
+  box-shadow: grey;
+} */
