--- a/src/Home/components/Toolbar.css
+++ b/src/Home/components/Toolbar.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 54px;
-    background-color: #68ebd1;
+    background-color: #e8dee7;
     height: 100%;
     z-index: 250;
 }
